# PMS_Backend

./: .dockerignore  .env  .gitignore  BALANCED_SCORECARD.md  DATABASE_SETUP.md  Dockerfile  PHASE-5-EXECUTION-GUIDE.md  PHASE-5-INTEGRATION-COMPLETE.md  PHASE-5-STAGE-3-SUMMARY.md  PHASE-5-STAGE-4-COMPLETE.md  PHASE-5-STAGE-4-ROUTING.md  PHASE-5-STAGE-5-ONBOARDING.md  PHASE-5-STAGE-6-MIGRATION.md  PHASE-5-STAGE-7-TESTING.md  PHASE-5-STAGES-4-7-INDEX.md  PHASE-5-STAGES-5-8-EXECUTION-REPORT.md  README.md  REPOSITORY_LAYER_SUMMARY.md  VERCEL_DEPLOYMENT.md  app.py  cleaned.py  inbound.py  inbound_UAE.py  inspect_excel.py  inspect_records.py  main.py  migrate_actions_to_remote.py  preapprovals_offshore.py  pyproject.toml  requirements.txt  scratch_clear_and_reseed.py  scratch_inspect_all_sheets.py  scratch_inspect_excel.py  scratch_inspect_excel_types.py  scratch_inspect_may_files.py  scratch_inspect_records.py  scratch_inspect_uae.py  scratch_list_cols.py  scratch_list_sheets.py  scratch_search_may.py  (+6 more)
Data_Cleaning_Teams/: __init__.py  coding.py  csr.py  inbound.py  outbound.py  pharmacy.py  preapprovals_ip_final_dubai.py  preapprovals_op_dubai.py  re_submission.py  sales.py  submission.py
api/: dependencies.py  routes.py
config/: database.py  loader.py  logging_config.py  settings.py  socket_config.py
data/: README.md  corrective_actions.json  employees.json  kpi_weights.json  performance_records.json  targets.json  team_actions.json  uploads.json  users.json
data_cleaning/: __init__.py  base_cleaner.py  cleaner_factory.py  standard_mappings.py
migrations/: env.py
(+197 files in other folders)
