[project]
name = "pms-dashboard-api"
version = "1.0.0"
dependencies = [
    "fastapi==0.137.1",
    "pydantic==2.13.4",
    "uvicorn==0.49.0",
    "pandas==3.0.3",
    "openpyxl==3.1.5",
    "numpy==2.4.6",
    "python-multipart==0.0.32",
    "python-socketio[asyncio]>=5.11.0",
    "python-dotenv==1.2.2",
    "pyjwt==2.13.0",
    "bcrypt==4.1.2",
    "redis==5.0.1",
    "sqlalchemy[asyncio]==2.0.41",
    "alembic==1.16.4",
    "asyncpg==0.30.0",
    "psycopg2-binary==2.9.10",
    "greenlet==3.2.3",
    "python-pptx==1.0.2",
]
requires-python = ">=3.11"
